provisioning/kubernetes/nginx-controller/examples/example-ingress.tls-staging.yaml
# kubectl create deployment web --image=gcr.io/google-samples/hello-app:1.0

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-stag
spec:
  tls:
    - hosts:
      -  tech.example.com
      secretName: ing-tls-sample-web
  rules:
    - host: tech.example.com
      http:
        paths:
        - backend:
            serviceName: web
            servicePort: 8080
