provisioning/kubernetes/nginx-controller/examples/example-ingress.yaml
# kubectl create deployment web --image=gcr.io/google-samples/hello-app:1.0

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tech.example.com
      http:
        paths:
        - backend:
            serviceName: web
            servicePort: 8080
